# transactions-tracker

./: .dockerignore  .gitignore  README.md  docker-compose.yml  task.Dockerfile
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.workspace.yml
api/: Dockerfile  pyproject.toml
api/src/transactions-api/: __init__.py
backend/: Dockerfile  pyproject.toml
backend/src/transactions/: nordigen.py
backend/src/transactions/api/: api.py
backend/src/transactions/data_structures/: structured_enum.py
backend/src/transactions/nordigen/: connect.py  lib.py  schedule.py  task.py
backend/src/transactions/odm/: __init__.py  bank_connection.py  transaction.py
backend/tests/: test_data_structures.py
model/: pyproject.toml
model/src/transactions_model/: __init__.py
model/tests/: test_model.py
model_rs/: Cargo.toml  pyproject.toml
model_rs/src/: lib.rs
task/: Dockerfile  crontab  pyproject.toml
task/src/transactions-task/: __main__.py
task/src/transactions_task/: __init__.py  __main__.py  link_acct.py
transactions-frontend/: package-lock.json  package.json
