[project]
name = "transactions"
version = "0.1.0"
dependencies = [
    "bunnet",
    "iso4217",
    "python-dateutil",
    "pydantic",
    "loguru",
    "requests",
    "nordigen",
    "schedule",
    "fastapi[standard]",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"